Added Feed and New Post pages. Needs CSS

--- a/WebContent/MainStyle.css
+++ b/WebContent/MainStyle.css
@@ -5,9 +5,13 @@
 body {
 	background-color: #3b4f5c;
 	font-family: Quicksand;
+	margin: 0;
+	padding: 0;
+	padding-top: 100px;
+	padding-bottom: 30px;
 }
 
-div {
+.loginDiv {
 	position: fixed; 
 	top : 50%; 
 	left : 50%; 
@@ -18,25 +22,36 @@ div {
 	box-shadow: 0px 0px 25px;
 }
 
-h1 {
+.logo {
+	margin: auto;
+	display: block;
+}
+
+#navLogo {
+	display: inline;
+	margin: auto;
+	padding: 5px 2px 0px 5px;
+}
+
+.loginH1 {
 	text-align: center;
 	margin-bottom: 5%;
 	font-size: 50px;
 	margin-top: 0px;
 }
 
-input, select {
+input, .genderSelect {
 	width: 100%;
 	font-size: 20px;
 	padding: 2px;
 	margin: 5px 0px;
 }
 
-select {
+.genderSelect {
 	width: 70%;
 }
 
-input[type=submit] {
+.loginBtn {
 	border: none;
 	text-align: center;
 	padding-top: 10px;
@@ -48,7 +63,72 @@ input[type=submit] {
 	transition-duration: 0.5s;
 }
 
-input[type=submit]:hover{
+.loginBtn:hover{
 	background-color: #00db0f;
 	cursor: pointer;
+}
+
+nav {
+	overflow: hidden;
+	background-color: #363636;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	box-shadow: 0px 0px 15px;
+}
+
+.navLink {
+	float: left;
+	text-decoration: none;
+	font-size: 30px;
+	color: #fff;
+	padding: 10px;
+}
+
+.navLink:last-child {
+	float: right;
+	color: #e89999;
+	padding: 10px 20px;
+}
+
+.navLink:hover:not(#navLogo) {
+	background-color:#000;
+	transition-duration: 0.5s;
+}
+
+#newPost {
+	color: #69ffa5
+}
+
+.feedDiv {
+	background-color: #fff9eb;
+	width: 70%;
+	height: 100%;
+	display: block;
+	margin: auto;
+	padding: 20px;
+	text-align: center;
+	border-radius: 15px;
+	box-shadow: 0px 0px 30px;
+}
+
+.postHeader {
+	padding: 20px;
+}
+
+#postUser {
+	float: left;
+}
+
+#postedAt {
+	float: right;
+}
+
+#postImg {
+	max-width: 80%;
+	max-height: 80%;
+}
+
+#feedEnd {
+	margin: auto;
 }
